Fix horizontal scroll when mobile menu is open (#456)

--- a/apps/frontend/static_src/scss/components/base.scss
+++ b/apps/frontend/static_src/scss/components/base.scss
@@ -12,7 +12,7 @@ body {
     color: light-dark($color--off-black, $color--light-grey);
 
     &.no-scroll {
-        overflow-y: hidden;
+        overflow: hidden;
     }
 }
 
